# UnificatoreObsidian

./: .editorconfig  .gitignore  LICENSE  README.md  progress.md  pyproject.toml  test.md
.github/workflows/: ci.yml
scripts/: build-portable.ps1
src/unificatore_obsidian/: __init__.py  __main__.py  builder.py  cli.py
tests/: test_builder.py
