[project]
name = "unificatore-obsidian"
version = "0.1.0"
description = "Genera un PDF unificato partendo da un indice Markdown di Obsidian."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Heppy" },
]
keywords = ["obsidian", "markdown", "pdf", "pandoc", "documentation", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
portable = [
  "pyinstaller>=6.11",
]

[project.scripts]
unificatore-obsidian = "unificatore_obsidian.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unificatore_obsidian"]

[tool.uv]
package = true
